<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".HomeActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/logo_image"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/logo" />

                <Button
                    android:id="@+id/home_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="Home" />

                <Button
                    android:id="@+id/details_button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/teal_700"
                    android:enabled="true"
                    android:text="Details" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/search_query_edittext"
                    android:layout_width="264dp"
                    android:layout_height="58dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="56dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="Search" />

                <ImageButton
                    android:id="@+id/search_button"
                    android:layout_width="67dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="56dp"
                    android:layout_marginEnd="16dp"
                    android:background="?android:attr/actionModeWebSearchDrawable"
                    android:backgroundTint="@color/teal_700"
                    android:contentDescription='"Button for search"'
                    android:foregroundTint="#673AB7"
                    app:strokeColor="#009688" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/game_list"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight = "1" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
